--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic|Open+Sans:700,400|Orbitron:400" />
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Pm2 by Unitech</title>
+    <title>pm2</title>
   </head>
 
   <body>
@@ -18,22 +19,77 @@
       <div class="inner">
 
         <header>
-          <h1>Pm2</h1>
+          <center>
+            <h1>
+              <a name="" class="anchor" href="#"><span class="octicon octicon-link"></span></a><img src="https://github.com/unitech/pm2/raw/master/pres/top-logo-wo.png" alt="Monit">
+            </h1>
+          </center>
           <h2>Modern CLI process manager for Node apps with a builtin load-balancer</h2>
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/Unitech/pm2/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
+          <a style="margin-left : 144px" href="https://github.com/Unitech/pm2/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
           <a href="https://github.com/Unitech/pm2/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
           <a href="https://github.com/Unitech/pm2" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
         <hr>
+        <h2>They talk about pm2 on Twitter</h2>
+        <center>
+          <img src="images/twitter.png" alt="Monit">
+        </center>
+        <hr>
+        <h2>Who is watching pm2 ?</h2>
+        <br/>
+        <center>
+          <img src="images/bitdeli.png" alt="Monit">
+        </center>        
+        <hr>        
+        <h2>Sponsors</h2>
+        <br/>
+        <center>
+          <a href="http://epitech.eu" style="margin-right:100px" title="Ecole Informatique EPITECH France">
+            <img src="images/epitech.jpg" alt="Epitech Ecole">
+          </a>
+          <a href="http://wiredcraft.com" title="Wiredcraft building apps around Data">
+            <img src="images/wiredcraft.jpg" alt="Wiredcraft Company">
+          </a>
+        </center>
+        <br/>
+        <hr>        
+        <h2>Creator</h2>
+        <br/>
+        <center>
+          <a href="https://github.com/Unitech" title="Alexandre Strzelewicz Github">
+            <img width="200" src="images/alex.jpeg" alt="Alexandre Strzelewicz"/>
+          </a>
+          <p class="special-name">
+            Alexandre Strzelewicz
+          </p>
+          <div id="descr">
+            FullStack developer at Unitech.io, making next gen softwares and innovative interfaces.
+            <ul style="margin-top: 10px">
+              <li><a href="https://github.com/Unitech">GitHub</a></li>
+              <li><a href="http://apps.hemca.com">Portfolio</a></li>
+              <li><a href="http://www.linkedin.com/in/alexandrestrzelewicz">LinkedIN</a></li>
+            </ul>
+          </div>          
+<br/>
+          <h3>Q : Why pm2 ?</h3>
+          <div>
+            I created pm2 to enhance performance of NodeJS Apps and to keep them alive, forever.<br/>
+            I wanted to give back to the OpenSource community, by giving them a technology that they can use and hack.<br/> This tool follow industry standards in terms of stability and performance.
+          </div>
+          
+        </center>
+        <br/>
+        <br/>
+
+        <hr>
+        <br/>
+        <h2>Documentation</h2>
 
         <section id="main_content">
-          <h1>
-<a name="" class="anchor" href="#"><span class="octicon octicon-link"></span></a><img src="https://github.com/unitech/pm2/raw/master/pres/top-logo-wo.png" alt="Monit">
-</h1>
 
 <p>pm2 is a process manager for Node apps with a builtin load-balancer.</p>
 
